[gd_scene load_steps=4 format=3 uid="uid://bjnsoiqn7vnog"]

[ext_resource type="Script" uid="uid://c8le1c02viplu" path="res://user_interface/all_resources/all_resources.gd" id="1_4hvgi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8xgl"]
bg_color = Color(0.786191, 0.83177876, 0.8454542, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_s8xgl"]

[node name="AllResources" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hvgi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s8xgl")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="RtlPageTitle" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Resources"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnAddResourceItem" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Add a Resource Item"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_s8xgl")

[node name="ILAllResources" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BtnAddResourceItem" to="." method="_on_btn_add_resource_item_pressed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/ILAllResources" to="." method="_on_il_all_resources_item_selected"]
